Fix alignment of navbar on Firefox
Problem with auto width of picture, needed to tell browsers that the image
needs to displayed in 50x50px

--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ body{
 .navigatorTop .topImg{
     display: flex;
     height: 50px;
-    margin-right: auto;
+    width: 50px;
 }
 
 .navigatorTop .projects{
